<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

            <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/mad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/madpr"
                    android:textSize="30sp"
                    android:layout_margin="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="30dp"
                    style="?attr/materialCardViewElevatedStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mad">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/alarm"
                            android:contentDescription="Image1"/>

                        <TextView
                            android:id="@+id/text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text1"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="10dp"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintTop_toBottomOf="@id/imageView"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text1"/>

                        <TextView
                            android:id="@+id/text3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/check"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text2"/>

                        <TextClock
                            android:id="@+id/currentClock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:format12Hour="hh:mm:ss a MMM, dd yyyy"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text3" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/create_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/create"
                            app:icon="@drawable/outline_alarm_add_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/currentClock" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardCornerRadius="30dp"
                    style="?attr/materialCardViewElevatedStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card1">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="match_parent"
                            android:layout_height="193dp"
                            android:contentDescription="Image2"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/alarm1" />

                        <TextView
                            android:id="@+id/text4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/settime"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/imageView1" />

                        <TextView
                            android:id="@+id/alarmTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textAppearance="?attr/textAppearanceTitleMedium"
                            tools:text="10:30:00 AM"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text4" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/cancel_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/cancel"
                            app:icon="@drawable/outline_alarm_off_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/alarmTime" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card2"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>